# MiMMO

./: AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yaml
docs/: Doxyfile.in
examples/: README.md
examples/basic/: scalar_prod.cpp
examples/globals/: allvars.cpp  allvars.hpp  compile_and_run.txt  main.cpp
examples/scalar_product/: compile_and_run.txt  main.cpp
examples/scalar_product/plain/: main.cpp
examples/scalar_product/with_subroutine/: main.cpp
include/api/: dual_memory_manager.hpp
include/dual_memory_manager/: dual_memory_manager.hpp
include/mimmo/: api.hpp
include/private/: abort.hpp  abort_manager.hpp  allocate.inl  arrays.inl  copy.inl  free.inl  helper_macros.hpp  memory_tracker.hpp  scalars.inl
src/: abort.cpp  abort_manager.cpp  memory_tracker.cpp  memory_usage.cpp  report_memory_usage.cpp
tests/: unit_tests_main.cpp
